--- a/index.html
+++ b/index.html
@@ -21,17 +21,18 @@
       </nav>
 
       <div class="container">
-        <div class="row">
-          <div class="col-12 text-center">
+        <div class="row mx-5">
+          <div class="col-12">
             <ul>
                 <li>Il prezzo del biglietto è definito in base ai km (0.21 € al km)</li>
                 <li>Va applicato uno sconto del 20% per i minorenni</li>
                 <li>Va applicato uno sconto del 40% per gli over 65.</li>
             </ul>
           </div>
-          <div class="col-12 text-center">
-              <p></p>
-            <p>prezzo biglietto del tuo biglietto e': </p>
+          <div class="col  bg-danger">
+              <p id="eta'">La tua eta' e': </p>
+              <p id="km da percorrere">Devi percorrere: </p>
+            <p class="text-center">prezzo biglietto del tuo biglietto e': </p>
           </div>
 
 
