--- a/index.html
+++ b/index.html
@@ -29,28 +29,19 @@
                 <li>Va applicato uno sconto del 40% per gli over 65.</li>
             </ul>
           </div>
-          <div class="col  bg-danger">
-              <p id="eta'">La tua eta' e': </p>
-              <p id="km da percorrere">Devi percorrere: </p>
-            <p class="text-center">prezzo biglietto del tuo biglietto e': </p>
+        </div>
+    </div>
+          <div class="row mx-5 bg-warning text-center">
+            <div class="col-12">
+                <p> La tua eta' e': </p> 
+                <p id="eta"></p>
+                <p>Devi percorrere: </p> 
+                <span id="km"> </span> <span> km</span> <br>
+            </div>
+            <p>Il prezzo biglietto del tuo biglietto e': </p>
+            <p id="risultato"></p>
           </div>
-
-
-
-
-
-
-
-    <!-- Optional JavaScript; choose one of the two! -->
+        
     <script type="text/javascript" src="main.js"></script>
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    -->
-
   </body>
 </html>
