--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <p>Devi percorrere: </p> 
                 <span id="km"> </span> <span> km</span> <br>
             </div>
-            <p>Il prezzo biglietto del tuo biglietto e': </p>
+            <p>Il prezzo biglietto del tuo biglietto e' di euro: </p>
             <p id="risultato"></p>
           </div>
         
