--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                 <p> La tua eta' e': </p> 
                 <p id="eta"></p>
                 <p>Devi percorrere: </p> 
-                <span id="km"> </span> <span> km</span> <br>
-            </div>
-            <p>Il prezzo biglietto del tuo biglietto e' di euro: </p>
+                <span id="km"> </span> <span> km</span>
+            </div> 
+            <p> <br> Il prezzo biglietto del tuo biglietto e' di euro: </p>
             <p id="risultato"></p>
           </div>
         
