--- a/bonus/bonus2.html
+++ b/bonus/bonus2.html
@@ -11,7 +11,7 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <h1>GIOCO DEL PARI O DISPARI</h1>
 
    
     <script type="text/javascript" src="bonus2.js"></script>
