aggiunti commenti nel file index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           </a>
         </div>
       </nav>
-
+                  <!--descrizione del calcolo del prezzo biglietto-->
       <div class="container">
         <div class="row mx-5">
           <div class="col-12">
@@ -31,10 +31,12 @@
           </div>
         </div>
     </div>
+                           <!--eta' del passeggero -->
           <div class="row mx-5 bg-warning text-center">
             <div class="col-12">
                 <p> La tua eta' e': </p> 
                 <p id="eta"></p>
+                            <!--km da percorrere -->
                 <p>Devi percorrere: </p> 
                 <span id="km"> </span> <span> km</span>
             </div> 
